[package]
name = "api-td-mpsi1-fr"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
hyper = { version = "0.14.4", features = ["full"] }
serde = { version = "1.0.124", features = ["derive"] }
bytes = "1.0.1"
image = "0.23.14"
serde_json = "1.0.64"
base64 = "0.13.0"
http = "0.2.3"
hmac = "0.10.1"
sha2 = "0.9.3"
rusqlite = { version = "0.24.2", features = ["bundled"] }
subtle = "2.4"
futures = "0.3.13" 
